deploy/bootstrap/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: atlas-dev
  labels:
    environment: dev
    app.kubernetes.io/part-of: atlas-platform
    app.kubernetes.io/managed-by: kubectl
---
apiVersion: v1
kind: Namespace
metadata:
  name: atlas-staging
  labels:
    environment: staging
    app.kubernetes.io/part-of: atlas-platform
    app.kubernetes.io/managed-by: kubectl
---
apiVersion: v1
kind: Namespace
metadata:
  name: atlas-prod
  labels:
    environment: prod
    app.kubernetes.io/part-of: atlas-platform
    app.kubernetes.io/managed-by: kubectl
